Fix qa-descriptor, fix spacing below footer on mobile

--- a/src/main/content/_assets/css/header.css
+++ b/src/main/content/_assets/css/header.css
@@ -213,4 +213,8 @@ main {
     #ol_nav_title {
         visibility: hidden;
     }
+
+    .qa-descriptor {
+        display: none;
+    }
 }
