--- a/src/main/content/_assets/css/openliberty.scss
+++ b/src/main/content/_assets/css/openliberty.scss
@@ -528,6 +528,10 @@ footer {
         float: none;
     }
 
+    #footer_bottom_container {
+        margin-bottom: 0px;
+    }
+
     #footer_round_links_container {
         display: inline-block;
     }
